--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,2 +1,4 @@
+<div class="minHeight">
 <h1>StaticPages#index</h1>
-<p>Find me in app/views/static_pages/index.html.erb</p>
+<p>Find me in app/views/static_pages/index.html.erb</p><h1>StaticPages#index</h1>
+</div>
